namespace TimeLedger.Core.Models;

public class Event
{
    public int Id { get; set; }
    public EventOwnerType OwnerType { get; set; } = EventOwnerType.User;
    public int OwnerId { get; set; }
    public string Title { get; set; } = string.Empty;
    public string? Description { get; set; }
    public string? Location { get; set; }
    public DateTime StartTime { get; set; }
    public DateTime EndTime { get; set; }
    public bool AllowOverlap { get; set; }
}