@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55
hide empty members

title TimeLedger - Event Layered Class Diagram

package "Presentation" #E3F2FD {
  class "Event Pages" as EventPages <<Razor Pages>>
  class "Event DTOs" as EventDTOs <<DTO>>
}

package "Service" #E8F5E9 {
  class EventService <<Service>> {
    - repo: IEventRepository
    + GetAll(ownerType: EventOwnerType, ownerId: int): IEnumerable<EventResponseDto>
    + GetById(id: int, ownerType: EventOwnerType, ownerId: int): EventResponseDto?
    + Create(dto: CreateEventDto, ownerType: EventOwnerType, ownerId: int): (EventResponseDto, bool)
    + Update(id: int, dto: UpdateEventDto, ownerType: EventOwnerType, ownerId: int): (EventResponseDto, bool)
    + Delete(id: int, ownerType: EventOwnerType, ownerId: int): void
  }
  class Event <<Model>> {
    + Id: int
    + OwnerType: EventOwnerType
    + OwnerId: int
    + Title: string
    + Description: string?
    + Location: string?
    + StartTime: DateTime
    + EndTime: DateTime
    + AllowOverlap: bool
  }
}

package "Repository" #FFF3E0 {
  interface IEventRepository <<Interface>> {
    + GetAll(ownerType: EventOwnerType, ownerId: int): IEnumerable<Event>
    + GetById(id: int, ownerType: EventOwnerType, ownerId: int): Event?
    + Add(e: Event): Event
    + Update(e: Event): Event
    + Delete(e: Event): void
    + HasOverlap(startTime: DateTime, endTime: DateTime, excludeId: int?, ownerType: EventOwnerType, ownerId: int): bool
  }
  class EventRepository <<Repository>> {
    - _connectionString: string
    + GetAll(ownerType: EventOwnerType, ownerId: int): IEnumerable<Event>
    + GetById(id: int, ownerType: EventOwnerType, ownerId: int): Event?
    + Add(e: Event): Event
    + Update(e: Event): Event
    + Delete(e: Event): void
    + HasOverlap(startTime: DateTime, endTime: DateTime, excludeId: int?, ownerType: EventOwnerType, ownerId: int): bool
  }
  class InMemoryEventRepository <<Repository>> {
    - _events: List<Event>
    - _nextId: int
    + GetAll(ownerType: EventOwnerType, ownerId: int): IEnumerable<Event>
    + GetById(id: int, ownerType: EventOwnerType, ownerId: int): Event?
    + Add(e: Event): Event
    + Update(e: Event): Event
    + Delete(e: Event): void
    + HasOverlap(startTime: DateTime, endTime: DateTime, excludeId: int?, ownerType: EventOwnerType, ownerId: int): bool
  }
}

EventPages --> EventService
EventPages --> EventDTOs
EventService --> EventDTOs
EventService --> Event
EventService ..> IEventRepository
IEventRepository <|.. EventRepository
IEventRepository <|.. InMemoryEventRepository
EventRepository --> Event
InMemoryEventRepository --> Event

@enduml
